Fixed menu hovers in dark mode desktop view

--- a/apps/block_scout_web/assets/css/theme/_dark-theme.scss
+++ b/apps/block_scout_web/assets/css/theme/_dark-theme.scss
@@ -804,23 +804,25 @@ $labels-dark: #8a8dba; // header nav, labels
     color: $dark-primary;
     position: relative;
 }
-.dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link:hover,
-.dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link.activeLink,
-.dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link:focus {
-	background-image: none;
-    width: 100%;
-	background-color: #35335d!important;
-	color: white;
-	border: none;
-  }
-  .dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link:hover:before
-   {
-	content: "|";
-    height: 50px;
-    width: 50%;
-    opacity: 1;
-    background: none;
-    left: 24%;
-    top: 14%;
-	color: $dark-primary;
-	}
+@media (max-width: 991.98px) {
+	.dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link:hover,
+	.dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link.activeLink,
+	.dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link:focus {
+		background-image: none;
+		width: 100%;
+		background-color: #35335d!important;
+		color: white;
+		border: none;
+	  }
+	  .dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link:hover:before
+	   {
+		content: "|";
+		height: 50px;
+		width: 50%;
+		opacity: 1;
+		background: none;
+		left: 24%;
+		top: 14%;
+		color: $dark-primary;
+		}
+		}
